--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,17 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "./api/app.js" }]
+  "version": 2,
+  "builds": [
+    {
+      "src": "./api/app.js",
+      "use": "@now/node"
+    }
+  ],
+  "routes": [
+    {
+      // Specify which paths will route to a destination using a regex
+      "src": "/(.*)",
+      // Specify the paths' destination
+      "dest": "./api/app.js"
+    }
+  ]
 }
