--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "todoapi",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
@@ -15,5 +14,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^8.0.4"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
